@@ -1,3 +1,7 @@
+2011-06-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* dpxfile.c: fix a bug in exec_spawn().
+
 2011-06-03  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* Makefile.am (mapdata*): Do install the map file, still needed
